--- a/src/NCmdArgs/project.json
+++ b/src/NCmdArgs/project.json
@@ -1,11 +1,14 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "1.0.1-*",
 
   "dependencies": {
     "NETStandard.Library": "1.6.0"
   },
 
   "frameworks": {
+    "net460": {},
+    "net461": {},
+    "net462": {},
     "netstandard1.6": {
       "imports": "dnxcore50"
     }
