--- a/src/NCmdArgs/project.json
+++ b/src/NCmdArgs/project.json
@@ -1,14 +1,13 @@
 ﻿{
-  "version": "1.0.2-*",
+  "version": "1.0.3",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.1"
   },
 
   "frameworks": {
     "net460": {},
     "net461": {},
-    "net462": {},
     "netstandard1.6": {
       "imports": "dnxcore50"
     }
